tests/data/placebo/test_network_compare_location_resource_missing/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "108.56.181.242/32"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-6c7fa917",
                                "UserId": "644160558196"
                            }
                        ]
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-6c7fa917",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "Private"
                    }
                ],
                "VpcId": "vpc-d2d616b5"
            }
        ],
        "ResponseMetadata": {}
    }
}
