tests/data/placebo/test_network_compare_location_resource_missing/ec2.DescribeSubnets_1.json
{
    "status_code": 200,
    "data": {
        "Subnets": [
            {
                "AvailabilityZone": "us-east-1b",
                "AvailabilityZoneId": "use1-az6",
                "AvailableIpAddressCount": 4088,
                "CidrBlock": "172.31.16.0/20",
                "DefaultForAz": true,
                "MapPublicIpOnLaunch": true,
                "MapCustomerOwnedIpOnLaunch": false,
                "State": "available",
                "SubnetId": "subnet-efbcccb7",
                "VpcId": "vpc-d2d616b5",
                "OwnerId": "644160558196",
                "AssignIpv6AddressOnCreation": false,
                "Ipv6CidrBlockAssociationSet": [],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": ""
                    }
                ],
                "SubnetArn": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-efbcccb7"
            },
            {
                "AvailabilityZone": "us-east-1a",
                "AvailabilityZoneId": "use1-az4",
                "AvailableIpAddressCount": 4088,
                "CidrBlock": "172.31.0.0/20",
                "DefaultForAz": true,
                "MapPublicIpOnLaunch": true,
                "MapCustomerOwnedIpOnLaunch": false,
                "State": "available",
                "SubnetId": "subnet-914763e7",
                "VpcId": "vpc-d2d616b5",
                "OwnerId": "644160558196",
                "AssignIpv6AddressOnCreation": false,
                "Ipv6CidrBlockAssociationSet": [],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "Public"
                    }
                ],
                "SubnetArn": "arn:aws:ec2:us-east-1:644160558196:subnet/subnet-914763e7"
            }
        ],
        "ResponseMetadata": {}
    }
}
