tests/data/placebo/test_network_compare_location_resource_missing/elasticloadbalancing.DescribeTags_1.json
{
    "status_code": 200,
    "data": {
        "TagDescriptions": [
            {
                "ResourceArn": "arn:aws:elasticloadbalancing:us-east-1:644160558196:loadbalancer/net/nicnoc/d1c62a508f72274f",
                "Tags": [
                    {
                        "Key": "Env",
                        "Value": "Dev"
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
